5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1646_2731.log
== TEST (2019-04-15 22:40:11) 
-- CODE:
from math import *
b = float(input("Digite: "))
c = float(input("Digite: "))
angulo = radians(float(input("Digite: ")))
form = ((b**2) + (c**2)) - (2*b*c*cos(angulo)))
var = sqrt(form)
print(round(var,2))

-- ERROR:
File "XXXX", line 5
    form = ((b**2) + (c**2)) - (2*b*c*cos(angulo)))
                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:40:46) 
-- CODE:
from math import *
b = float(input("Digite: "))
c = float(input("Digite: "))
angulo = radians(float(input("Digite: ")))
form = ((b**2) + (c**2)) - (2*b*c*cos(angulo))
var = sqrt(form)
print(round(var,2))

-- OUTPUT:
6.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:50:31) 
-- CODE:
from math import *
b = float(input("Digite: "))
c = float(input("Digite: "))
angulo = radians(float(input("Digite: ")))
form = ((b**2) + (c**2)) - (2*b*c*cos(angulo))
var = sqrt(form)
print(round(var,1))

-- OUTPUT:
6.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:52:31) 
-- CODE:
from math import *
b = float(input("Digite: "))
c = float(input("Digite: "))
angulo = radians(float(input("Digite: ")))
form = ((b**2) + (c**2)) - (2*b*c*cos(angulo))
var = sqrt(form)
print(round(var,2))

-- OUTPUT:
6.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
